Adding `ensureAllModulesInstantiated()` function. Renaming `executionFolder` argument to `executionScriptFolder`. Minor changes throughout.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(addModuleSpecifications)
 export(addSharedResources)
 export(createEmptyAnalysisSpecificiations)
 export(createExecutionSettings)
+export(ensureAllModulesInstantiated)
 export(execute)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
