--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(storeConnectionDetails)
 import(CohortGenerator)
 import(DatabaseConnector)
 import(dplyr)
+importFrom(methods,is)
 importFrom(rlang,.data)
