Add gnome-keyring dependency for Linux

--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -67,6 +67,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y libssh-dev
+          sudo apt-get install -y gnome-keyring
           Rscript -e 'install.packages("remotes")'
           Rscript -e 'install.packages("keyring")'
           Rscript -e 'writeLines(keyring:::b_ss_is_available(report_error = TRUE))'
