--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -69,7 +69,7 @@ jobs:
           sudo apt-get install -y libssh-dev
           Rscript -e 'install.packages("remotes")'
           Rscript -e 'install.packages("keyring")'
-          Rscript -e 'writeLines(as.character(keyring::keyring_create()))'
+          Rscript -e 'writeLines(as.character(keyring::keyring_create(keyring = NULL, password = "foobar")))'
           while read -r cmd
           do
             eval sudo $cmd
