--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -67,10 +67,9 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y libssh-dev
-          Rscript -e 'install.packages("remotes")'
-          Rscript -e 'install.packages("keyring")'
+          Rscript -e 'install.packages(c("remotes", "keyring", "knitr")'
           Rscript -e 'writeLines(as.character(keyring::keyring_create(keyring = "system", password = "foobar")))'
-          Rscript -e 'writeLines(as.character(keyring::keyring_list()))'
+          Rscript -e 'writeLines(knitr::kable(keyring::keyring_list()))'
           while read -r cmd
           do
             eval sudo $cmd
