--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -68,7 +68,7 @@ jobs:
         run: |
           sudo apt-get install -y libssh-dev
           Rscript -e 'install.packages(c("remotes", "keyring", "knitr"))'
-          Rscript -e 'writeLines(as.character(keyring::keyring_create(keyring = "system", password = "foobar")))'
+          Rscript -e 'keyring::keyring_create(keyring = "system", password = "foobar")'
           Rscript -e 'knitr::kable(keyring::keyring_list())'
           while read -r cmd
           do
