--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -69,6 +69,7 @@ jobs:
           sudo apt-get install -y libssh-dev
           sudo apt-get install -y gnome-keyring
           Rscript -e 'install.packages(c("remotes", "keyring"))'
+          Rscript -e 'writeLines(paste0("has_keyring_support: ", keyring::has_keyring_support()))'
           Rscript -e 'kb <- keyring::backend_secret_service$new(); kb$keyring_create("gha"); kb$set_default_keyring("gha")'
           while read -r cmd
           do
