Updates from review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ensureAllModulesInstantiated)
 export(execute)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
+export(unlockKeyring)
 import(CohortGenerator)
 import(DatabaseConnector)
 import(dplyr)
