Add helper function to list Strategus modules - closes #30

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(createEmptyAnalysisSpecificiations)
 export(createResultsExecutionSettings)
 export(ensureAllModulesInstantiated)
 export(execute)
+export(getModuleList)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
 export(unlockKeyring)
