--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,10 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.3
+pandoc: 2.19.2
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
+  CreatingAnalysisSpecification: CreatingAnalysisSpecification.html
   CreatingModules: CreatingModules.html
-last_built: 2022-06-10T08:34Z
+  ExecuteStrategus: ExecuteStrategus.html
+  IntroductionToStrategus: IntroductionToStrategus.html
+last_built: 2023-01-24T16:24Z
 
