--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(addModuleSpecifications)
 export(addSharedResources)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
+export(createResultModel)
 export(createResultsExecutionSettings)
 export(ensureAllModulesInstantiated)
 export(execute)
