--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,9 +36,7 @@ Suggests:
     fs,
     knitr,
     rmarkdown,
-    Eunomia,
-    webshot,
-    visNetwork
+    Eunomia
 Remotes:
   ohdsi/CohortGenerator,
   ohdsi/Eunomia
