--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -20,9 +20,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: '4.2.3', rtools: '42', rspm: "https://cloud.r-project.org"}
+          #- {os: windows-latest, r: '4.2.3', rtools: '42', rspm: "https://cloud.r-project.org"}
           #- {os: macOS-latest, r: '4.2.3', rtools: '42', rspm: "https://cloud.r-project.org"}
-          #- {os: ubuntu-20.04, r: '4.2.3', rtools: '42', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-20.04, r: '4.2.3', rtools: '42', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
           #- {os: windows-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
           #- {os: macOS-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
           #- {os: ubuntu-20.04, r: 'release', rtools: '', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
@@ -63,9 +63,9 @@ jobs:
           r-version: ${{ matrix.config.r }}
           rtools-version: ${{ matrix.config.rtools }}
 
-      - uses: r-lib/actions/setup-renv@v2
-        with:
-          bypass-cache: true
+      # - uses: r-lib/actions/setup-renv@v2
+      #   with:
+      #     bypass-cache: true
 
       - uses: r-lib/actions/setup-tinytex@v2
 
@@ -89,27 +89,29 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - uses: r-lib/actions/check-r-package@v2
-        with:
-          args: 'c("--no-manual", "--as-cran")'
-          error-on: '"warning"'
-          check-dir: '"check"'
-
-      - name: Upload source package
-        if: success() && runner.os == 'Windows' && github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v2
-        with:
-          name: package_tarball
-          path: check/*.tar.gz
+      # - uses: r-lib/actions/check-r-package@v2
+      #   with:
+      #     args: 'c("--no-manual", "--as-cran")'
+      #     error-on: '"warning"'
+      #     check-dir: '"check"'
+      #
+      # - name: Upload source package
+      #   if: success() && runner.os == 'Windows' && github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: package_tarball
+      #     path: check/*.tar.gz
 
       - name: Install covr
-        if: runner.os == 'Windows'
+        #if: runner.os == 'Windows'
+        if: runner.os == 'Linux'
         run: |
           install.packages("covr")
         shell: Rscript {0}
 
       - name: Test coverage
-        if: runner.os == 'Windows'
+        #if: runner.os == 'Windows'
+        if: runner.os == 'Linux'
         run: covr::codecov()
         shell: Rscript {0}
 
