--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -99,13 +99,13 @@ jobs:
           path: check/*.tar.gz
 
       - name: Install covr
-        if: runner.os == 'Windows'
+        if: runner.os == 'Linux'
         run: |
           install.packages("covr")
         shell: Rscript {0}
 
       - name: Test coverage
-        if: runner.os == 'Windows'
+        if: runner.os == 'Linux'
         run: covr::codecov()
         shell: Rscript {0}
 
