--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: Strategus
 Type: Package
 Title: Coordinating and Executing Analytics Using HADES Modules
 Version: 0.1.0
-Date: 2023-08-15
+Date: 2023-09-25
 Authors@R: c(
-	person("Martijn", "Schuemie", email = "schuemie@ohdsi.org", role = c("aut", "cre")),
-	person("Anthony", "Sena", email = "sena@ohdsi.org", role = c("aut")),
+	person("Martijn", "Schuemie", email = "schuemie@ohdsi.org", role = c("aut")),
+	person("Anthony", "Sena", email = "sena@ohdsi.org", role = c("aut", "cre")),
 	person("Jamie", "Gilbert", role = c("aut")),
 	person("Observational Health Data Science and Informatics", role = c("cph"))
   )
