--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModels)
 export(createResultsExecutionSettings)
+export(createStrategusKeyring)
 export(ensureAllModulesInstantiated)
 export(execute)
 export(getModuleList)
