Initial module verification function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getModuleList)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
 export(unlockKeyring)
+export(verifyModuleInstallation)
 import(CohortGenerator)
 import(DatabaseConnector)
 import(dplyr)
