--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addModuleSpecifications)
 export(addSharedResources)
+export(compareLockFiles)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModels)
@@ -11,6 +12,7 @@ export(execute)
 export(getModuleList)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
+export(syncLockFile)
 export(unlockKeyring)
 export(verifyModuleInstallation)
 import(CohortGenerator)
