--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(retrieveConnectionDetails)
 export(storeConnectionDetails)
 export(syncLockFile)
 export(unlockKeyring)
+export(validateLockFile)
 export(verifyModuleInstallation)
 import(CohortGenerator)
 import(DatabaseConnector)
