Adding renv.lock helper functions (#116)
* Fix module check and results upload bugs

* Add helper functions and update test module

* Adding tests

* Add renv.lock file validation helper

* Add local module renv.lock validator script to extras

* Add dev modules for testing

* Update analysis spec to use newly released modules

* Update module reference file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addModuleSpecifications)
 export(addSharedResources)
+export(compareLockFiles)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModels)
@@ -11,7 +12,9 @@ export(execute)
 export(getModuleList)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
+export(syncLockFile)
 export(unlockKeyring)
+export(validateLockFile)
 export(verifyModuleInstallation)
 import(CohortGenerator)
 import(DatabaseConnector)
