--- a/.github/workflows/release_docker.yaml
+++ b/.github/workflows/release_docker.yaml
@@ -29,9 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GH_TOKEN }}
-      DOCKER_IMAGE: ${{ inputs.docker_image.default || secrets.DOCKER_IMAGE }}
+      DOCKER_IMAGE: ${{ inputs.docker_image || secrets.DOCKER_IMAGE }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # ------------------------------------
       # The pattern for the following steps is specified
@@ -40,7 +40,7 @@ jobs:
       # Add Docker labels and tags
       - name: Docker meta
         id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.DOCKER_IMAGE }}
           tag-match: v(.*)
@@ -61,7 +61,7 @@ jobs:
           echo "::set-output name=sha8::${GITHUB_SHA::8}"
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./
           file: ./Dockerfile
