Add function to zip results for sharing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(syncLockFile)
 export(unlockKeyring)
 export(validateLockFile)
 export(verifyModuleInstallation)
+export(zipResults)
 import(CohortGenerator)
 import(DatabaseConnector)
 import(dplyr)
