Add function to install latest module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createResultsExecutionSettings)
 export(ensureAllModulesInstantiated)
 export(execute)
 export(getModuleList)
+export(installLatestModule)
 export(retrieveConnectionDetails)
 export(storeConnectionDetails)
 export(syncLockFile)
