--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Strategus
 Type: Package
 Title: Coordinating and Executing Analytics Using HADES Modules
-Version: 0.3.0
+Version: 1.0.0
 Date: 2023-06-04
 Authors@R: c(
 	person("Martijn", "Schuemie", email = "schuemie@ohdsi.org", role = c("aut")),
@@ -19,12 +19,9 @@ Depends:
 	CohortGenerator (>= 0.8.0),
 	DatabaseConnector (>= 6.2.3)
 Imports:
-  targets,
-  renv (>= 1.0.0),
   ParallelLogger (>= 3.1.0),
   dplyr,
   checkmate,
-  keyring,
   rlang,
   utils,
   R.utils,
@@ -32,10 +29,7 @@ Imports:
   methods,
   tibble,
   ResultModelManager (>= 0.3.0),
-  SqlRender (>= 1.11.0),
-  semver,
-  httr2,
-  jsonlite
+  SqlRender (>= 1.11.0)
 Suggests:
   testthat (>= 3.0.0),
   fs,
