--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ BugReports: https://github.com/OHDSI/Strategus/issues
 Depends:
 	R (>= 4.2.0),
 	CohortGenerator (>= 0.8.0),
-	DatabaseConnector (>= 6.2.3)
+	DatabaseConnector (>= 6.2.3),
+	R6
 Imports:
   ParallelLogger (>= 3.1.0),
   dplyr,
