Basic upload and results viewing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createEmptyAnalysisSpecificiations)
 export(createResultDataModels)
 export(createResultsExecutionSettings)
 export(execute)
+export(uploadResults)
 export(zipResults)
 import(CohortGenerator)
 import(DatabaseConnector)
