--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CohortDiagnosticsModule)
 export(CohortGeneratorModule)
 export(CohortIncidenceModule)
 export(CohortMethodModule)
+export(PatientLevelPredictionModule)
 export(StrategusModule)
 export(addModuleSpecifications)
 export(addSharedResources)
