--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CohortGeneratorModule)
 export(CohortIncidenceModule)
 export(CohortMethodModule)
 export(PatientLevelPredictionModule)
+export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
 export(addModuleSpecifications)
 export(addSharedResources)
