Adding EvidenceSynthesis module (not working)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CohortDiagnosticsModule)
 export(CohortGeneratorModule)
 export(CohortIncidenceModule)
 export(CohortMethodModule)
+export(EvidenceSynthesisModule)
 export(PatientLevelPredictionModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
