Add context specific module settings functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,15 @@ export(EvidenceSynthesisModule)
 export(PatientLevelPredictionModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
+export(addCharacterizationModuleSpecifications)
+export(addCohortDiagnosticsModuleSpecifications)
+export(addCohortGeneratorModuleSpecifications)
+export(addCohortIncidenceModuleSpecifications)
+export(addCohortMethodeModuleSpecifications)
+export(addEvidenceSynthesisModuleSpecifications)
 export(addModuleSpecifications)
+export(addPatientLevelPredictionModuleSpecifications)
+export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
