Settings for results data model creation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,8 @@ export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
-export(createResultDataModels)
+export(createResultDataModel)
+export(createResultsDataModelSettings)
 export(createResultsExecutionSettings)
 export(execute)
 export(uploadResults)
