--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ export(createEmptyAnalysisSpecificiations)
 export(createResultDataModel)
 export(createResultsDataModelSettings)
 export(createResultsExecutionSettings)
+export(createResultsUploadSettings)
 export(execute)
+export(getDatabaseIdentifierFilePath)
 export(uploadResults)
 export(zipResults)
 import(CohortGenerator)
