--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(uploadResults)
 export(zipResults)
 import(CohortGenerator)
 import(DatabaseConnector)
+import(R6)
 import(dplyr)
 importFrom(methods,is)
 importFrom(rlang,.data)
