Fix missing deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,12 +33,15 @@ Suggests:
   CohortDiagnostics,
   CohortIncidence,
   CohortMethod,
+  Cyclops,
   Eunomia,
   EvidenceSynthesis,
+  FeatureExtraction,
   fs,
   knitr,
   PatientLevelPrediction,
   rmarkdown,
+  RSQLite,
   SelfControlledCaseSeries,
   testthat (>= 3.0.0),
   withr
