Add getCdmDatabaseMetaData function and expose database metadata in execution settings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(createResultDataModel)
 export(createResultsDataModelSettings)
 export(createResultsExecutionSettings)
 export(execute)
+export(getCdmDatabaseMetaData)
 export(getDatabaseIdentifierFilePath)
 export(uploadResults)
 export(zipResults)
