Add PLP Validation module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(CohortIncidenceModule)
 export(CohortMethodModule)
 export(EvidenceSynthesisModule)
 export(PatientLevelPredictionModule)
+export(PatientLevelPredictionValidationModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
 export(addCharacterizationModuleSpecifications)
