--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CohortGeneratorModule)
 export(CohortIncidenceModule)
 export(CohortMethodModule)
 export(EvidenceSynthesisModule)
+export(ModelTransferModule)
 export(PatientLevelPredictionModule)
 export(PatientLevelPredictionValidationModule)
 export(SelfControlledCaseSeriesModule)
