--- a/extras/rdms/schemaspy-config.properties
+++ b/extras/rdms/schemaspy-config.properties
@@ -1,6 +1,6 @@
 schemaspy.t=pgsql
 
-schemaspy.dp=postgresql-42.6.0.jar
+schemaspy.dp=$HOME/postgresql-jdbc.jar
 
 schemaspy.host=127.0.0.1
 schemaspy.port=5432
