--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,12 +1,16 @@
-name: CI
+name: pkgdown
 
 on: push
-permissions:
-  contents: write
 jobs:
-  build:
+  pkgdown:
     runs-on: ubuntu-latest
-
+    # Only restrict concurrency for non-PR jobs
+    #concurrency:
+    #  group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      contents: write
     services:
       postgres:
         image: postgres:latest
@@ -23,6 +27,24 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: Setup Pandoc
+      uses: r-lib/actions/setup-pandoc@v2
+
+    - name: Setup R
+      uses: r-lib/actions/setup-r@v2
+      with:
+        use-public-rspm: true
+
+    - name: Setup R Dependencies
+      uses: r-lib/actions/setup-r-dependencies@v2
+      with:
+        extra-packages: any::pkgdown, local::.
+        needs: website
+
+    - name: Build site
+      run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+      shell: Rscript {0}
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -53,34 +75,18 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: documentation-artifact
-        path: public
+        path: docs/results-schema
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: documentation
-  #   steps:
-  #     - name: Exécuter SchemaSpy
-  #       run: |
-  #         ls
-  #         echo aaaaaaa
-  #
-  #     - name: Checkout du code
-  #       uses: actions/checkout@v2
-  #
-  #     - name: Exécuter SchemaSpy
-  #       run: |
-  #         ls
-  #         echo aaaaaaa
-  #
-  #     - name: download documentation
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: documentation-artifact
-  #         path: public
-  #
-  #
-  #     - name: "Deploy Github Pages"
-  #       uses: JamesIves/github-pages-deploy-action@3.7.1
-  #       with:
-  #         BRANCH: gh-pages
-  #         FOLDER: public/
+    - name: download documentation
+      uses: actions/download-artifact@v2
+      with:
+        name: documentation-artifact
+        path: docs/results-schema
+
+    - name: Deploy to GitHub pages 🚀
+      #if: github.event_name != 'pull_request'
+      uses: JamesIves/github-pages-deploy-action@v4.4.1
+      with:
+          clean: false
+          branch: gh-pages
+          folder: docs
