--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,6 +1,19 @@
-name: pkgdown
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+on:
+  push:
+    #branches: [main, master]
+    branches: *
+  #pull_request:
+  #  branches: [main, master]
+  #release:
+  #  types: [published]
+  workflow_dispatch:
 
-on: push
+name: pkgdown.yaml
+
+permissions: read-all
+
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
@@ -85,8 +98,8 @@ jobs:
 
     - name: Deploy to GitHub pages 🚀
       #if: github.event_name != 'pull_request'
-      uses: JamesIves/github-pages-deploy-action@v4.4.1
-      with:
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        with:
           clean: false
           branch: gh-pages
           folder: docs
