--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -8,7 +8,7 @@ on:
   #  branches: [main, master]
   #release:
   #  types: [published]
-  workflow_dispatch:
+  #workflow_dispatch:
 
 name: pkgdown.yaml
 
