--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -3,12 +3,12 @@
 on:
   push:
     #branches: [main, master]
-    branches: *
-  #pull_request:
-  #  branches: [main, master]
-  #release:
-  #  types: [published]
-  #workflow_dispatch:
+    branches: [results-data-model]
+  pull_request:
+    branches: [main, master]
+  release:
+    types: [published]
+  workflow_dispatch:
 
 name: pkgdown.yaml
 
