--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -41,23 +41,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Setup Pandoc
-      uses: r-lib/actions/setup-pandoc@v2
-
-    - name: Setup R
-      uses: r-lib/actions/setup-r@v2
-      with:
-        use-public-rspm: true
-
-    - name: Setup R Dependencies
-      uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        extra-packages: any::pkgdown, local::.
-        needs: website
-
-    - name: Build site
-      run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
-      shell: Rscript {0}
+    # - name: Setup Pandoc
+    #   uses: r-lib/actions/setup-pandoc@v2
+    #
+    # - name: Setup R
+    #   uses: r-lib/actions/setup-r@v2
+    #   with:
+    #     use-public-rspm: true
+    #
+    # - name: Setup R Dependencies
+    #   uses: r-lib/actions/setup-r-dependencies@v2
+    #   with:
+    #     extra-packages: any::pkgdown, local::.
+    #     needs: website
+    #
+    # - name: Build site
+    #   run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+    #   shell: Rscript {0}
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -82,19 +82,19 @@ jobs:
 
     - name: Execute SchemaSpy
       run: |
-        java -jar extras/rdms/schemaspy-6.2.4.jar -vizjs -dp $HOME -configFile extras/rdms/schemaspy-config.properties -out docs/results-schema -meta extras/rdms/schema_meta.xml -debug
+        java -jar extras/rdms/schemaspy-6.2.4.jar -vizjs -dp $HOME -configFile extras/rdms/schemaspy-config.properties -meta extras/rdms/schema_meta.xml -debug
 
-    # - name: Upload artifact
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: documentation-artifact
-    #     path: docs/results-schema
-    #
-    # - name: download documentation
-    #   uses: actions/download-artifact@v4
-    #   with:
-    #     name: documentation-artifact
-    #     path: docs/results-schema
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+       name: documentation-artifact
+       path: public
+
+    - name: download documentation
+      uses: actions/download-artifact@v4
+      with:
+        name: documentation-artifact
+        path: docs/results-schema
 
     - name: Deploy to GitHub pages 🚀
       #if: github.event_name != 'pull_request'
