--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,8 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    #branches: [main, master]
-    branches: [results-data-model]
+    branches: [main, master]
   pull_request:
     branches: [main, master]
   release:
@@ -18,8 +17,8 @@ jobs:
   pkgdown:
     runs-on: ubuntu-latest
     # Only restrict concurrency for non-PR jobs
-    #concurrency:
-    #  group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
+    concurrency:
+      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     permissions:
@@ -41,23 +40,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # - name: Setup Pandoc
-    #   uses: r-lib/actions/setup-pandoc@v2
-    #
-    # - name: Setup R
-    #   uses: r-lib/actions/setup-r@v2
-    #   with:
-    #     use-public-rspm: true
-    #
-    # - name: Setup R Dependencies
-    #   uses: r-lib/actions/setup-r-dependencies@v2
-    #   with:
-    #     extra-packages: any::pkgdown, local::.
-    #     needs: website
-    #
-    # - name: Build site
-    #   run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
-    #   shell: Rscript {0}
+    - name: Setup Pandoc
+      uses: r-lib/actions/setup-pandoc@v2
+
+    - name: Setup R
+      uses: r-lib/actions/setup-r@v2
+      with:
+        use-public-rspm: true
+
+    - name: Setup R Dependencies
+      uses: r-lib/actions/setup-r-dependencies@v2
+      with:
+        extra-packages: any::pkgdown, local::.
+        needs: website
+
+    - name: Build site
+      run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+      shell: Rscript {0}
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -97,7 +96,7 @@ jobs:
         path: docs/results-schema
 
     - name: Deploy to GitHub pages 🚀
-      #if: github.event_name != 'pull_request'
+      if: github.event_name != 'pull_request'
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
         clean: false
