--- a/extras/rdms/schemaspy-config.properties
+++ b/extras/rdms/schemaspy-config.properties
@@ -2,9 +2,9 @@ schemaspy.t=pgsql
 
 schemaspy.host=127.0.0.1
 schemaspy.port=5432
-schemaspy.db=mydb
+schemaspy.db=strategus
 schemaspy.u=user
 schemaspy.p=password
 
 schemaspy.o=./public
-schemaspy.s=public
+schemaspy.s=results
